--- a/index.html
+++ b/index.html
@@ -209,17 +209,9 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
-          </p>
-
-          <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+           Welcome! I'm Ma. Mae Bautista, a third-year Physical Education major and ROTC Advance Officer. As an only child, I've honed independence and responsibility, values that drive my academic and leadership pursuits. 
+            In this portfolio, explore my passion for promoting health, showcasing academic achievements, projects, and leadership experiences. 
+            Let's connect and shape a healthier future together!
           </p>
         </section>
 
