--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 
         
         <!--
-          - clients
+          - paintings
         -->
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Paintings</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -285,18 +285,6 @@
             <li class="clients-item">
               <a href="#">
                 <img src="./assets/images/logo-4-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
               </a>
             </li>
 
