--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
 
 
+    
     <!--
       - #main-content
     -->
@@ -174,21 +175,24 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link " data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link " data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link " data-nav-link>Contact</button>
+            <button class="navbar-link" data-nav-link>Blog</button>
+          </li>
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Contact</button>
           </li>
 
         </ul>
 
       </nav>
-
 
       <!--
         - #ABOUT
