--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
            <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+            <button class="navbar-link" data-nav-link>Gallery</button>
           </li>
 
         
@@ -541,7 +541,7 @@
       <article class="portfolio" data-page="portfolio">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Gallery</h2>
         </header>
 
         <section class="projects">
