--- a/index.html
+++ b/index.html
@@ -535,10 +535,10 @@
 
       </article>
  <!--
-        - #PORTFOLIO
+        - #Gallery
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="Gallery" data-page="Gallery">
 
         <header>
           <h2 class="h2 article-title">Gallery</h2>
