--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
            <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Gallery</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
         
@@ -535,13 +535,13 @@
 
       </article>
  <!--
-        - #Gallery
+        - #Portfolio
       -->
 
-      <article class="Gallery" data-page="Gallery">
+      <article class="Portfolio" data-page="Portfolio">
 
         <header>
-          <h2 class="h2 article-title">Gallery</h2>
+          <h2 class="h2 article-title">Portfolio</h2>
         </header>
 
         <section class="projects">
