--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         - #Portfolio
       -->
 
-      <article class="Portfolio" data-page="Portfolio">
+         <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
